# VisCoder

./: .gitignore  README.md  index.html
eval/: README.md
eval/PandasPlotBench/: README.md  alter_tasks.py  analyze_tasks.py  batch_eval_run.py  launch_normal_eval.sh  launch_self_debug_eval.sh  present_bench_results.py  print_exec_pass.py  pyproject.toml  requirements.txt  run_benchmark.py
eval/PandasPlotBench/configs/: config_normal_baseline.yaml  config_normal_viscoder.yaml  config_self_debug_baseline.yaml  config_self_debug_viscoder.yaml  config_single_run.yaml
eval/PandasPlotBench/dataset/: data-0.csv  data-1.csv  data-10.csv  data-100.csv  data-101.csv  data-102.csv  data-103.csv  data-104.csv  data-105.csv  data-106.csv  data-107.csv  data-108.csv  data-109.csv  data-11.csv  data-110.csv  data-111.csv  data-112.csv  data-113.csv  data-114.csv  data-115.csv  data-116.csv  data-117.csv  data-118.csv  data-119.csv  data-12.csv  data-120.csv  data-121.csv  data-122.csv  data-123.csv  data-124.csv  data-125.csv  data-126.csv  data-128.csv  data-129.csv  data-13.csv  data-130.csv  data-131.csv  data-132.csv  data-133.csv  data-134.csv  (+120 more)
eval/PandasPlotBench/plotting_benchmark/: benchmark.py  code_plot_generator.py  custom_task_changer.py  debug_utils.py  task_changer.py  vis_generator.py  vis_judge.py
eval/PandasPlotBench/plotting_benchmark/generation_engines/: base_engine.py  openai_engine.py  vllm_engine.py
eval/PandasPlotBench/plotting_benchmark/resources/: config_template.yaml  instructs.json
train/: README.md  train_viscoder_3b.sh  train_viscoder_7b.sh
